# treasure-box

./: build.gradle  dependencies.gradle  gradle.properties  keystore.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lifefighter/treasurebox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lifefighter/treasurebox/: ExampleUnitTest.kt
base/: build.gradle
base/src/main/: AndroidManifest.xml
base/src/main/java/com/lifefighter/base/: BaseActivity.kt  BaseFragment.kt  BaseService.kt  Const.kt  ContextHelper.kt  CoroutinesHelper.kt  LifecycleBinder.kt  Router.kt
base/src/main/res/layout/: default_loading_dialog.xml
base/src/main/res/values/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
ocr/: build.gradle
ocr/src/main/: AndroidManifest.xml
ocr/src/main/java/com/lifefighter/ocr/: OcrLibrary.kt  OcrResult.kt
ocr/src/main/jni/: CMakeLists.txt  ocr.cpp
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
utils/src/main/java/com/lifefighter/utils/: AccessibilityServiceUtils.kt  AppConfigsUtils.kt  BasicTypeUtils.kt  ContextUtils.kt  CoroutineUtils.kt  DataBindingUtils.kt  EventBusManager.kt  ExpcetionUtils.kt  FragmentTransactionUtils.kt  JsonUtils.kt  LogUtils.kt  NetUtils.kt  ParcelableUtils.kt  ServiceUtils.kt  (+3 more)
widget/: build.gradle
widget/src/main/: AndroidManifest.xml
widget/src/main/res/values/: attrs.xml  colors.xml  databinding_attrs.xml  dimens.xml  styles.xml  themes.xml
(+22 files in other folders)
